# SpeechAnalyzer

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  DEVELOPER.md  README.md  SpeechAnalyzer.sln
Src/: CMakeLists.txt  Local.testsettings  MSEA.2010.sln  MSEA.2012.sln  MSEA.sln  Release Notes.txt  Roadmap.txt  SA MSEA Release Notes.txt  SA MSEA Roadmap.txt  SA ToDo.doc  SaC#Projects.sln  SpeechAnalyzer.sln  SpeechAnalyzer2010.sln  SpeechAnalyzer2010.vsmdi  SpeechAnalyzer2012.sln  TraceAndTestImpact.testsettings  astyle.opts  documentation_markup.txt  doxygen.cfg  reformat.cmd
Src/ElanUtils/: Elan.cpp  Elan.h  ElanUtils.h  ElanUtils.vcproj  ElanUtils.vcxproj  stdafx.cpp  stdafx.h
Src/ElanUtilsTest/: Elan_Test.vcxproj  Test.cpp  TestElan.cpp
Src/FileUtils/: FileUtils.cpp  FileUtils.h  FileUtils.vcproj  FileUtils.vcxproj
Src/Lang/: Rs_MiniC.h  Rs_MiniC.rc  SA_DEU.rc  SA_DEU.vcxproj  SA_ENU.rc  SA_ENU.vcxproj  custom_menu.h  sa_lang_resource.h
Src/LiftUtils/: Lift.cpp  Lift.h  Lift13.cpp  Lift13.h  Lift14.cpp  Lift14.h  Lift15.cpp  Lift15.h  LiftUtils.h  LiftUtils.vcproj  LiftUtils.vcxproj  uriparser.lib  uriparserd.lib
Src/LiftUtilsTest/: Lift_Test.vcxproj  Test.cpp  TestLift.cpp  packages.config
Src/MBROLA/: CMakeLists.txt  ipasampa.cpp  ipasampa.h  mbrola.cpp  mbrola.h  mbrola.rc  mbrola.vcproj  mbrola.vcxproj  parser.h  resource.h  ussampa1.h  ussampa2.h
Src/SA/: AS.rc  AS.vcxproj  AlignInfo.cpp  AlignInfo.h  Annotation Windows.cd  Annotation.cd  AppContext.cpp  AppContext.h  AppDefs.h  AppImpl.cpp  AppImpl.h  ArchiveTransfer.cpp  ArchiveTransfer.h  As.vcxproj.filters  AutoSave.cpp  AutoSave.h  AutoSegmentation.cpp  AutoSegmentation.h  Ch_DlWnd.cpp  Ch_DlWnd.h  Ch_Dlg.cpp  Ch_Dlg.h  Ch_Table.cpp  Ch_Table.h  ChildFrame.cpp  ChildFrame.h  Clip.cpp  ClipboardHelper.cpp  ClipboardHelper.h  Colors.cpp  Colors.h  ContextProvider.cpp  ContextProvider.h  DataStatusBar.cpp  DataStatusBar.h  DependentSegment.cpp  DependentSegment.h  DependentTextSegment.cpp  DependentTextSegment.h  DlgASStart.cpp  (+380 more)
Src/SAProcessor/: AbstractPitchProcess.cpp  AbstractPitchProcess.h  AnalyticLpcAnalysis.cpp  AnalyticLpcAnalysis.h  Butterworth.cpp  Butterworth.h  Context.h  FormantTracker.cpp  FormantTracker.h  Hilbert.cpp  Hilbert.h  IIRFilter.cpp  IIRFilter.h  IProcess.h  Lpc.cpp  Lpc.h  ObjectIStream.cpp  ObjectIStream.h  ObjectOStream.cpp  ObjectOStream.h  Param.cpp  PitchParm.cpp  PitchParm.h  Process.cpp  Process.h  ProcessAreaData.cpp  ProcessAreaData.h  ProcessDoc.cpp  ProcessDoc.h  ResearchSettings.cpp  ResearchSettings.h  SAProcessor.cd  SAProcessor.h  SAProcessor.vcxproj  SA_P_CHA.CPP  SA_P_CHA.H  SA_P_DUR.CPP  SA_P_FMT.CPP  SA_P_LOU.H  SA_P_RAT.CPP  (+77 more)
Src/SAScriptingTest/: SAScriptingTest.vcxproj  ScriptingTest.cpp  TestHelper.cpp  TestHelper.h  pch.cpp
Src/SAUtils/: AudioReader.cs  ISaAudioDocumentReader.cs  ISaAudioDocumentWriter.cs  MusicXML.cs  ProcessTypeFlags.cs  SAUtils.csproj  SaAudioDocument.cs  SaAudioDocumentReader.cs  SaAudioDocumentWriter.cs  SaDatabase.cs  TransConverter.cs  TransConvertersDlg.Designer.cs  TransConvertersDlg.cs  XmlHelper.cs  XmlSerializationHelper.cs
Src/SAUtilsTest/: MruFilesTests.cs  MsgDispatcherTests.cs  SAUtilsTest.csproj  SAUtils_Test.csproj  SettingsHandlerTests.cs  SilToolsTests.csproj  XmlHelperTests.cs
Src/SA_DSP/: ASM32.H  AcousticTube.cpp  AcousticTube.h  Asmx.h  CMakeLists.txt  Dspwins.h  Errcodes.h  Formants.cpp  Formants.h  Fragment.cpp  Fragment.h  Grappl.h  HPFLTR70.CPP  Hpfltr70.h  Mathx.h  Modules.h  NRUTIL.H  Roots.cpp  Roots.h  SA_DSP.def  SA_DSP.h  SA_DSP.vcproj  SA_DSP.vcxproj  Scale.h  Signal.h  Spectgrm.cpp  Spectgrm.h  Spectrum.cpp  Spectrum.h  Stddsp.h  SuperPitch.cpp  SuperPitch.h  WindowSettings.h  ZTransform.cpp  ZTransform.h  Zroots.c  complex.h  cspksrc.cpp  (+27 more)
(+1527 files in other folders)
