add_executable(SA WIN32 
AlignInfo.cpp
ArchiveTransfer.cpp
AutoSave.cpp
ChildFrame.cpp
Ch_Dlg.cpp
Ch_DlWnd.cpp
Ch_Table.cpp
Clip.cpp
ClipboardHelper.cpp
Colors.cpp
DependentSegment.cpp
DependentTextSegment.cpp
DlgAdvancedParsePhrases.cpp
DlgAdvancedParseWords.cpp
DlgAdvancedSegment.cpp
DlgAlignTranscriptionDataAlignByPage.cpp
DlgAlignTranscriptionDataFinishPage.cpp
DlgAlignTranscriptionDataImportRefPage.cpp
DlgAlignTranscriptionDataInitPage.cpp
DlgAlignTranscriptionDataSegmentByPage.cpp
DlgAlignTranscriptionDataSheet.cpp
DlgAlignTranscriptionDataTextPage.cpp
DlgAutoRecorder.cpp
DlgAutoReferenceData.cpp
DlgExportFW.cpp
DlgExportFWResult.cpp
DlgExportSFM.cpp
DlgExportTable.cpp
DlgExportXML.cpp
DlgFind.cpp
DlgFnKeys.cpp
DlgImport.cpp
DlgImportSFM.cpp
DlgImportSFMRef.cpp
DlgInsertSilence.cpp
DlgKlattAll.cpp
DlgMbrola.cpp
DlgMultiChannel.cpp
DlgPlayer.cpp
DlgRecorder.cpp
DlgRecorderOptions.cpp
DlgResult.cpp
DlgSaveAsOptions.cpp
DlgSplitFile.cpp
DlgSynthesis.cpp
DlgToolsOptions.cpp
DlgVocalTract.cpp
DlgVowelFormants.cpp
DlgWaveformGenerator.cpp
DlgWaveNotifyObj.cpp
ExportFWSettings.cpp
FileEncodingHelper.cpp
fileInformation.cpp
FileOpen.cpp
FileUtils.cpp
FlexEditGrid.cpp
FmtParm.cpp
FnKeys.cpp
font.cpp
GlossSegment.cpp
graphsMagnify.cpp
graphsParameters.cpp
graphsTypes.cpp
Grid.cpp
Import.cpp
IndependentSegment.cpp
Lpc.cpp
MainFrm.cpp
mixer.cpp
mshflexgrid.cpp
MusicPhraseSegment.cpp
ObjectIStream.cpp
ObjectOStream.cpp
OrthoSegment.cpp
Param.cpp
Partiture.cpp
PhonemicSegment.cpp
PhoneticSegment.cpp
PickOver.cpp
picture.cpp
PlayMixer.cpp
PrintOpt.cpp
PrivateCursorWnd.cpp
RecMixer.cpp
recordset.cpp
ReferenceSegment.cpp
Riff.cpp
sa.cpp
SaParam.cpp
SaString.cpp
SA_Annot.cpp
SA_Asert.cpp
SA_CDib.cpp
SA_Cursr.cpp
SA_DlWnd.cpp
Sa_Doc.cpp
SA_DPlot.cpp
SA_Edit.cpp
Sa_grap2.cpp
Sa_graph.cpp
SA_GZ3D.CPP
SA_GZPOL.CPP
sa_g_3dPitch.cpp
SA_G_Cha.cpp
SA_G_CPi.cpp
Sa_G_Dur.cpp
Sa_g_glo.cpp
Sa_g_gra.cpp
SA_G_LOU.CPP
Sa_g_mag.cpp
sa_g_mel.cpp
SA_G_PIT.CPP
Sa_g_poa.cpp
SA_G_RAT.CPP
SA_G_RAW.CPP
sa_g_rec.cpp
Sa_g_spe.cpp
Sa_g_spg.cpp
SA_G_SPI.CPP
SA_G_SPU.CPP
SA_G_Stf.cpp
Sa_g_twc.cpp
sa_g_wavelet.cpp
SA_G_ZCR.CPP
sa_ipa.cpp
SA_MENU.CPP
Sa_minic.cpp
SA_MPLOT.CPP
Sa_plot.cpp
SA_SBAR.CPP
Sa_start.cpp
SA_View.cpp
SA_View2.cpp
Sa_wave.cpp
Sa_wbch.cpp
Sa_w_dlg.cpp
SA_W_DOC.CPP
ScopedCursor.cpp
Segment.cpp
SegmentSelection.cpp
SelfTest.cpp
SFMHelper.cpp
SpectroParm.cpp
SplitFileUtils.cpp
StartCursorWnd.cpp
STDAFX.CPP
StopCursorWnd.cpp
StpWatch.cpp
StringStream.cpp
StringUtils.cpp
TARGVIEW.CPP
TaskBar.cpp
TextHelper.cpp
TextSegment.cpp
ToneSegment.cpp
ToolSettings.cpp
TranscriptionData.cpp
TranscriptionDataSettings.cpp
TranscriptionHelper.cpp
Undoredo.cpp
UnicodeString.cpp
WaveformGenerator.cpp
WaveformGeneratorSettings.cpp
WaveInDevice.cpp
WaveOutDevice.cpp
WaveWarp.cpp
)
